<resources>
    <string name="app_name">Student tracker</string>
    <string name="administrator">ADMINISTRATOR</string>
    <string name="login_error">Missing Details</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="faculty">FACULTY</string>
    <string name="student">STUDENT</string>
    <string name="edutracker">EDUTRACKER</string>
    <string name="counsellor">Counsellor</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="missing_details">Missing Details!</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="nav_home">Home</string>
    <string name="nav_performance">Student Performance</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_schedulebatch">Schedule/Batches</string>
    <string name="nav_notifications">Received Notifications</string>
    <string name="nav_adminnotifications">Notifications</string>
    <string name="nav_broadcast">Broadcast</string>
    <!--<string name="nav_settings">Settings</string>-->
    <string name="nav_settings">About Developers</string>
    <string name="nav_manage_student">Manage Student</string>
    <string name="nav_broadcast_sms">Broadcast SMS</string>
    <string name="nav_syllabus">Syllabus</string>
    <string name="nav_Notes">Notes</string>
    <string name="nav_refer_friend">Refer Friend</string>
    <string name="nav_contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="payment">Payment</string>
    <string name="welcome">Welcome %s</string>
    <string name="weekend">This is Weekend Batch you are not allowed to add more days</string>
    <string name="selectcategory">Select Course Category</string>
    <string name="selectfaculty">Select Faculty</string>
    <string name="selectcourse">Select Course</string>
    <string name="noadmission">No Admission yet for this course…Please select other Courses !</string>
    <string name="verifybatch">Please verify .... No further changes in Batch</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_admin_activity_titles">
        <item>Home</item>
        <item>Add Counsellor</item>
        <item>Add Faculty</item>
        <item>Add Student</item>
        <item>Performance</item>
        <item>Schedule/Batches</item>
        <item>Notifications</item>
        <item>Broadcast</item>
        <!--<item>SyllabusList</item>-->
        <!--<item>Broadcast</item>-->
        <item>About Developers</item>
        <item>Privacy Policy</item>

    </string-array>

    <string-array name="nav_item_officestaff_activity_titles">
        <item>Home</item>
        <item>Add Faculty</item>
        <item>Add Student</item>
        <item>Manage Student</item>
        <item>Schedule/Batches</item>
        <item>Complete Batches</item>
        <item>Received Notifications</item>
        <item>Broadcast SMS</item>commit
        <item>About Developers</item>
        <item>Privacy Policy</item>
    </string-array>

    <string-array name="nav_item_faculty_activity_titles">
        <item>Home</item>
        <item>Attendance</item>>
        <item>Received Notifications</item>
        <item>Broadcast</item>
        <item>About Developers</item>
        <item>Privacy Policy</item>
    </string-array>

    <string-array name="nav_item_student_activity_titles">
        <item>Home</item>
        <!-- <item>Absent Date List</item>-->
        <item>Attendance/Syllabus</item>
        <item>Received Notifications</item>
        <item>Refer Friend</item>
        <item>Feedback</item>
        <item>Make Payment</item>
        <item>Contact</item>
        <item>About Developers</item>
        <item>Privacy Policy</item>
    </string-array>

    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="schedule">SCHEDULE</string>
    <string name="notification">NOTIFICATION</string>
    <string name="walk_in_interviews">Walk In Interviews</string>
    <string name="telephonic_interviews">Telephonic Interviews</string>
    <string name="addstudent">+STUDENT</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="add_students">Add Students</string>
    <string name="website">www.laqshyainfosoft.com</string>
    <string name="no_schedule">No schedule</string>
    <string name="check_in">Check IN</string>
    <string name="broadcast">Broadcast</string>
    <string name="progress">Progress</string>
    <string name="attendance_already_taken">Attendance Already Taken !</string>
    <string name="no_records_found">No Records Found</string>
    <string name="refer_details">Refer Details</string>
    <string name="friend_name">Friends Name</string>
    <string name="size_of_board">3</string>
    <string name="X">"   X   "</string>
    <string name="O">"   O   "</string>
    <string name="none">"          "</string>
    <string name="mobile">Phone Number</string>
    <string name="action_mark_all_read">Mark All As Read</string>
    <string name="action_clear_all">Clear All</string>
    <string name="no_student_available">No Student Available</string>
    <string name="subject_name">Subject name</string>

    <string name="view_reports">View Reports</string>
    <string name="absent">Absent</string>
    <string name="make_payment">Make Payment</string>
    <string name="no_new_notification_in_last_7_days">No New Notification in Last 7 days</string>
    <string name="selectstudents">Select Students to Notify</string>
    <string name="select_pending_students">Select Pending Students</string>
    <string name="selectbatch">Select to send to batch</string>
    <string name="selectcenter">Select to send to center</string>
    <string name="selecteveryone">Send to Everyone</string>
    <string name="add_counsellor">Add Counsellor</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="add_student">Add Student</string>
    <string-array name="colors">
        <item>#c42323</item>
        <item>#449f49</item>
        <item>#f2be2f</item>
        <item>#51c1c9</item>
        <item>#757575</item>
        <item>#add3e6</item>
        <item>#f4a453</item>
        <item>#b1bcbf</item>
    </string-array>
    <string name="center_number">Center mobile number</string>
    <string name="counsellor_number">Counsellor mobile number</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="center_name">Center name</string>
    <string-array name="center_arrays">
        <item>Mira Road</item>
        <item>Andheri</item>
        <item>Dadar</item>
        <item>Pune</item>
    </string-array>
    <string name="center_prompt">Choose a center</string>
    <string name="faculty_number">Enter faculty mobile number</string>
    <string name="hint_name">Name</string>
    <string name="student_name">Name</string>
    <string name="student_number">Number</string>
    <string name="course_name">Course name</string>
    <string-array name="course_arrays">
        <item>Android</item>
        <item>Java</item>
        <item>Excel</item>
        <item>Tally</item>
    </string-array>
    <string name="course_prompt">Choose a course</string>
    <string name="student_installment">Number of installments</string>
    <string name="student_downpayment">Downpayment</string>
    <string name="student_fees">Total Fees</string>
    <string name="hint_username">Username</string>
    <string name="counsellor_registration">Counsellor Registration</string>
    <string name="student_registration">Student Registration</string>
    <string name="courseError">Please Select Courses</string>
    <string name="facultyError">Please Select a Faculty</string>
    <string name="fieldsEmpty">Field cannot be empty</string>
    <string name="email_error">Please check the email address</string>
    <string name="mobile_error">Please check the phone number</string>
    <string name="student_installment_date">Date </string>
    <string name="student_installment_amnt"> Amount</string>
    <string name="location">location</string>
    <string name="installments">Installments Should be less than 10</string>
    <string name="manage_students">Manage Students</string>
    <string name="batchError">Please Add Atleast One Batch</string>
    <string name="dateError">Please Select a Batch Start Date</string>
    <string name="internet_connection">Please check your internet connection</string>
    <string name="course_module_prompt">Choose Course Module</string>
    <string name="course_module_name">Course Module</string>
    <string name="btn_save_courses">Save Courses</string>
    <string name="Notification_to_all">Send Notification to All Students</string>
    <string name="CheckBox">Please Tick To Send SMS With Notification</string>
    <string name="SendButton">Send</string>
    <string name="send">Send</string>
    <string name="singleStudent">One</string>
    <string name="same_center">Same Center</string>
    <string name="same_batch">Same Batch</string>
    <string name="pending_fees">Pending Fees</string>
    <string name="all_students">All Students</string>
    <string name="complete_batches">Complete Batches</string>
    <string name="deleted_batches">Deleted Batches</string>
    <string name="selectbatchmessage">Select to Send to Batch</string>
    <string name="selectcentermessage"> Send to Center</string>
    <string name="sendToDueStudents">Send to Students With Due Installments \n  (Ignore if already paid)</string>
    <string name="sent_notifications">Sent Notifications</string>
    <string name="errorwhilefetchingdata">Error while fetching data</string>
    <string name="errorOccured">Error occurred</string>
    <string name="add_syllabus">Add Syllabus</string>
    <string-array name="regularDays">
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>
    <string-array name="weekendDays">
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="readnotes">Read Notes</string>

    <string name="refer_us">Refer us to your friends. So they will get right guidance towards their career by accessing our services and they will able to contact us easily. They will also get a healthy discount as your friends comes to us on your referral and some incentives will be provided to you too.</string>
    <string name="save_courses">Save Courses</string>
    <string name="add_courses">Add Courses</string>
    <string name="installments_warn">Change all the installments accordingly.</string>
    <string name="searchmessages">Search Notifications</string>
    <string name="searchstudents">Search Student Names</string>

    <string-array name="schedule_batch_details">
        <item>All</item>
        <item>Running</item>
        <item>Completed</item>
        <item>Deleted</item>
    </string-array>
</resources>
