<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/add_consellor"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/add_counsellor" />

        <item
            android:id="@+id/add_faculty"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/add_faculty" />

        <item
            android:id="@+id/add_student"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/add_student" />

        <item
            android:id="@+id/add_syllabus"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/add_syllabus" />

        <item
            android:id="@+id/managestudentfees"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_manage_student" />

        <item
            android:id="@+id/schedulebatches"
            android:icon="@drawable/ic_assignment_turned_in_black_16dp"
            android:title="@string/nav_schedulebatch" />

        <item
            android:id="@+id/nav_notifications_admin"
            android:icon="@drawable/bell16"
            android:title="@string/nav_adminnotifications" />

        <item
            android:id="@+id/nav_broadcast_admin"
            android:icon="@drawable/ic_surround_sound_black_16dp"
            android:title="@string/nav_broadcast" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/android_logo_icon"
            android:title="@string/nav_settings" />


        <item
            android:id="@+id/nav_privacy_policy_admin"
            android:icon="@drawable/privacy_policy"
            android:title="@string/privacy_policy" />

    </group>

</menu>