<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="navViewmModel"
            type="com.app.laqshya.studenttracker.activity.viewmodel.NavDrawerViewModel" />
        <variable
            name="noOfCourses"
            type="Integer"/>
        </data>
<LinearLayout

    android:orientation="vertical"
    android:id="@+id/courseLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Spinner
        android:id="@+id/studentCourseSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/course_name"
        android:prompt="@string/course_prompt" />
    <com.example.custom_spinner_library.MultiSpinner_Event
        android:id="@+id/studentCourseModuleSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/course_module_name"
        android:prompt="@string/course_module_prompt" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/input_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_fees"

            android:inputType="phone"
            android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onFeesChanged(noOfCourses,text)}"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_downpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/input_downpayment"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/student_downpayment"
            android:inputType="phone"
            android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onDownPaymentChanged(noOfCourses,text)}"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_no_of_installments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/input_no_of_installments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_installment"

            android:inputType="phone"
            android:maxLength="1"
            android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onInstallmentTextChanged(noOfCourses,text)}"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/installmentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

    </LinearLayout>

</LinearLayout>
</layout>