<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="navViewmModel"
            type="com.app.laqshya.studenttracker.activity.viewmodel.NavDrawerViewModel" />
  <!--<variable-->
      <!--name="validation"-->
      <!--type="com.app.laqshya.studenttracker.activity.viewmodel.ValidationViewModel"/>-->
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">


                <TextView
                    android:id="@+id/activity_registration_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/student_registration"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/laqshya_logo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/input_student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_name"

                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_student_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/input_student_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_number"
                        android:inputType="phone"

                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>


                <Spinner
                    android:id="@+id/studentCourseSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/course_name"
                    android:prompt="@string/course_prompt" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_fees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/input_fees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_fees"

                        android:inputType="phone"
                        android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onFeesChanged(text)}"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_downpayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/input_downpayment"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:hint="@string/student_downpayment"
                        android:inputType="phone"
                        android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onDownPaymentChanged(text)}"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_no_of_installments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:id="@+id/input_no_of_installments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/student_installment"

                        android:inputType="phone"
                        android:maxLength="1"
                        android:onTextChanged="@{(text, start, before, count) ->navViewmModel.onInstallmentTextChanged(text)}"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/installmentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                </LinearLayout>


                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_sign_up"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>